2000-11-20  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/wm-spec.jl: support SKIP_PAGER state (linked
	to the `window-list-skip' property)

	(honour-client-state): set `no-history' property of panels

	(honour-client-state): fixed typo of _NET_WM_WINDOW_STATE
	instead of _NET_WM_STATE

	(update-workspace-hints): for sticky windows, set
	_NET_WM_DESKTOP to #xffffffff instead of deleting it

	(define-wm-spec-window-state): records the names of all
	registered states in `supported-states' variable
	(supported-state-p): new function

	(client-message-handler): deleted _NET_INSERT_DESKTOP and
	_NET_DELETE_DESKTOP messages, they're not in the spec anymore?
	Fixed paren bug in _NET_ACTIVE_WINDOW message handler

2000-11-16  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/gnome.jl (gnome-honour-client-state): set
	the `no-history' property of panel windows

	* sawfish/wm/custom.jl: new defcustom option `:widget-flags'

	* sawfish/wm/util/nokogiri.jl (nokogiri-report-slot): pass
	widget-flags across

	* sawfish/wm/workspace.jl, sawfish/wm/frames.jl,
	sawfish/wm/ext/audio-events.jl, sawfish/wm/util/groups.jl:
	marked some list options with `(expand framed)' flags

	* sawfish/wm/state/mwm.jl (mwm-add-window): support the
	min/max/close options of the mwm function hints

	* sawfish/wm/state/iconify.jl: don't add minimize to the
	toggles menu

	* sawfish/wm/menus.jl: simplified the window-ops-menu, just
	have minimize/maximize/close at the top of the menu, with other
	stuff below

	* sawfish/wm/menus.jl (menu-preprocessor): labels can now be
	functions, they will be called (with any menu-args) to get the
	actual string

	* sawfish/wm/frames.jl (after-setting-default-frame): used as
	:after-set function of default-frame-style. Checks that the new
	frame style is available, signals an error otherwise

	* sawfish/wm/custom.jl (define-custom-setter, custom-setter):
	store these in a dedicated hash table

	(custom-set-symbol): function to catch exceptions while