@@ -26,7 +26,8 @@
 	    focus-mode
 	    set-focus-mode
 	    focus-push-map
-	    focus-pop-map)
+	    focus-pop-map
+	    focus-within-click-event)
 
     (open rep
 	  rep.system
@@ -59,6 +60,10 @@
   (defvar focus-dont-push nil
     "When t, focusing a window doesn't change it's position in the stack of
 most-recently focused windows.")
+
+  (define focus-within-click-event (make-fluid nil)
+    "When non-nil, the current command is being called from within a
+click-to-focus button press event.")
 
 
 ;;; general utilities
@@ -110,15 +115,13 @@ EVENT-NAME)', where EVENT-NAME may be one of the following symbols:
 	  (saved (window-get w 'focus-saved-keymap)))
       (unless (or (eq current map) (null current))
 	(unless saved
-	  (window-put w 'focus-saved-keymap current)
-	  (window-put w 'ignore-fp-keymap t))
+	  (window-put w 'focus-saved-keymap current))
 	(window-put w 'keymap map))))
 
   (define (focus-pop-map w)
     (let ((saved (window-get w 'focus-saved-keymap)))
       (when saved
 	(window-put w 'keymap saved)
-	(window-put w 'ignore-fp-keymap nil)
 	(window-put w 'focus-saved-keymap nil))))
 
 
@@ -152,32 +155,24 @@ EVENT-NAME)', where EVENT-NAME may be one of the following symbols:
 	(set-input-focus w))
       (focus-pop-map w)
       ;; do we need to do anything with the event?
-      (if (and event (or (window-get w 'focus-click-through)
-			 focus-click-through
-			 (not (window-really-wants-input-p w))))
-	  ;; allow-events called with replay-pointer ignores any passive
-	  ;; grabs on the window, thus if the wm has a binding in the
-	  ;; window's keymap, it would be ignored. So search manually..
-	  (let ((command (lookup-event-binding event)))
-	    (cond (command
-		   (call-command command))
-		  ((not (progn
-			  (require 'sawfish.wm.util.decode-events)
-			  (should-grab-button-event-p
-			   event (window-get w 'keymap))))
-		   ;; pass the event through to the client window unless we
-		   ;; need to keep the grab for the events that would follow
-		   (allow-events 'replay-pointer)
-		   (forget-button-press))))
-	;; ungrab the pointer so that the non-click-through thing
-	;; works for window decorations as well as the client
-	;; (does this break anything?)
-	(when (window-really-wants-input-p w)
-	  (ungrab-pointer)
-	  (forget-button-press)))
-      ;; set-input-focus may not actually change the focus
-      (unless (eq (input-focus) w)
-	(focus-push-map w click-to-focus-map))))
+      (when event
+	;; allow-events called with replay-pointer ignores any passive
+	;; grabs on the window, thus if the wm has a binding in the
+	;; window's keymap, it would be ignored. So search manually..
+	(let ((command (lookup-event-binding event)))
+	  (if command
+	      (let-fluids ((focus-within-click-event t))
+		(call-command command))
+	    (require 'sawfish.wm.util.decode-events)
+	    (when (and (or focus-click-through
+			   (window-get w 'focus-click-through)
+			   (not (window-really-wants-input-p w)))
+		       (not (should-grab-button-event-p
+			     event (window-get w 'keymap))))
+	      ;; pass the event through to the client window unless we
+	      ;; need to keep the grab for the events that would follow
+	      (allow-events 'replay-pointer)
+	      (forget-button-press)))))))
 
   (defvar click-to-focus-map
     (bind-keys (make-keymap)
@@ -193,12 +188,14 @@ EVENT-NAME)', where EVENT-NAME may be one of the following symbols:
 	((focus-in)
 	 (focus-pop-map w))
 	((focus-out add-window)
-	 (unless (eq w (input-focus))
+	 (unless (or (not (window-really-wants-input-p w))
+		     (eq w (input-focus)))
 	   (focus-push-map w click-to-focus-map)))
 	((before-mode-change)
 	 (focus-pop-map w))
 	((after-mode-change)
-	 (unless (eq w (input-focus))
+	 (unless (or (not (window-really-wants-input-p w))
+		     (eq w (input-focus)))
 	   (focus-push-map w click-to-focus-map))))))
 
 
@@ -248,6 +245,7 @@ EVENT-NAME)', where EVENT-NAME may be one of the following symbols:
 		     ;; check that the correct keymaps are in place
 		     (unless (or (eq (input-focus) w)
 				 (not (window-mapped-p w))
+				 (not (window-really-wants-input-p w))
 				 (eq (window-get w 'keymap)
 				     click-to-focus-map))
 		       (format standard-error
