@@ -1,3 +1,7 @@
+2000-11-20  John Harper  <jsh@eazel.com>
+
+	* events.c: removed all the ignore-fp-keymap stuff
+
 2000-11-18  John Harper  <jsh@eazel.com>
 
 	* x.c (x_window_event_handler): pass the window as the second
